--- a/_posts/2019-07-01-the-us-narrative-today.html
+++ b/_posts/2019-07-01-the-us-narrative-today.html
@@ -2691,107 +2691,107 @@ stories:
   domain: http://www.cgsentinel.com/
   link: https://cgsentinel.com/article/as-next-freeze-approaches-red-cross-offers-safey-tips
 images:
-- name: crow-crow-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-far-away.jpg
-- name: birdhouse-birdhouse-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-dali-three.jpg
-- name: stories-new-statue-face-open-mouth-copper-circuit.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-statue-face-open-mouth-copper-circuit.png
-- name: razorwire-DSC-0080-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-dark-soul.jpg
-- name: old-granary-field-granaryfield-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-blue-circuit.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-dali-two.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-dali-two.JPG
-- name: border-crossing-bordercrossing-matrix.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-matrix.png
-- name: udnie-P6180010.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-P6180010.jpg
-- name: stories-fence-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-fence-crabapple.jpg
-- name: supreme-court-supremecourt-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-kand-two.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-creativity.jpg
-- name: white-house-lawn-white-house-window-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-neo-instinct.jpg
-- name: hollywood-building-hollywood-building-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-blue-circuit.jpg
-- name: bluelake-neo-instinct-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-neo-instinct-file-00-00-38-67.jpg
-- name: fence-gorilla.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-gorilla.jpg
-- name: hollywood-building-hollywood-building-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-deep-connections.jpg
-- name: fence-mexico-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-post-modern.jpg
-- name: school-clouds-church-clouds-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-alberto-giacometti.jpg
-- name: beach-clouds-lifeguard-beachclouds-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-far-away.jpg
-- name: meadowbutterfly-meadow-butterfly-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-alberto-giacometti.jpg
-- name: aws-s3-stories-border-traffic.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-border-traffic.jpg
-- name: crow-crow-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-ww2-color.jpg
-- name: curtain-curtain-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-sand-paper.jpg
-- name: border-crossing-bordercrossing-green-zuma.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-green-zuma.png
-- name: cargo-ship-cargo-ship-on-sea-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-colorful-dream.jpg
-- name: border-fence-border-fence-on-hill-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-smooth-ride.jpg
-- name: power-lines-power-lines-empty-space-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-copper-circuit.jpg
-- name: border-crossing-bordercrossing-ww2-color.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-ww2-color.png
-- name: oldhousecars-house-old-cars-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-marcel-duchamp.jpg
-- name: aws-s3-stories-castle-on-hill-edinburgh-feed-people.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-castle-on-hill-edinburgh-feed-people.JPG
-- name: containership-bw-storytelling.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-bw-storytelling.png
-- name: castle-on-hill-castle-on-hill-edinburgh-satan-red.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-satan-red.JPG
-- name: fast-lights-freeway-redes-fast-flux-623x425.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425.jpg
-- name: store-on-corner-oldcabin-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-clean-view.jpg
-- name: oldcabin-store-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-light-dali.jpg
-- name: crow_spagetti_accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_spagetti_accident.jpg
-- name: old-door-lock-old-door-lock-2-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-kandinsky-bv.jpg
-- name: old-house-oldhouse.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse.jpg
-- name: cargo-ship-cargo-ship-on-sea-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-free-woman.jpg
-- name: crow_crafty_painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_crafty_painting.jpg
-- name: stories-server-racks-clouds-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-server-racks-clouds-clean-view.jpg
-- name: windowmountain-window-mountain-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-purple-storm.jpg
-- name: crow_colorful_dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_colorful_dream.jpg
-- name: castle-wall-DSC-0067-blue-circuit.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-blue-circuit.JPG
-- name: ellis-island-ellisisland-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-wols.jpg
-- name: bluelake-blue-brush-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-blue-brush-file-00-00-00-00.jpg
-- name: power-lines-power-lines-empty-space-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-dark-rain.jpg
-- name: san-francisco-street-view-san-francisco-street-view-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-dark-soul.jpg
-- name: carry-load-carryload-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-crunch-paper.jpg
-- name: bluelake-colorful-blocks-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-colorful-blocks-file-00-00-38-67.jpg
-- name: old-door-lock-old-door-lock-2-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-atari-missle.jpg
+- name: yuma-bank-yuma-bak-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-cinnamon-rolls.jpg
+- name: bordercrossing-bordercrossing-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-gred-mash.jpg
+- name: powerlines-power-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-atari-asteroids.jpg
+- name: fence-bw-fist.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-bw-fist.png
+- name: abandonedbuildings_yellow_paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_yellow_paper.jpg
+- name: power-lines-power-lines-empty-space-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-yellow-paper.jpg
+- name: windowmountain-window-mountain-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-post-modern.jpg
+- name: old-granary-field-oldhouse-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-matrix.jpg
+- name: blossombar-purple-storm-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-purple-storm-file-00-00-00-00.jpg
+- name: rockingchair-rockingchair-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-blue-granite.jpg
+- name: server-cloud-server-racks-clouds-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-colorful-blocks.jpg
+- name: eduardo-eduardo-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-constitution.jpg
+- name: art-museum-art-museum-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-dark-soul.jpg
+- name: crow_monet_one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_monet_one.jpg
+- name: crow_purple_storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_purple_storm.jpg
+- name: power-lines-power-lines-empty-space-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-dark-soul.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-rainbow-festival.jpg
+- name: oldsmallboat-oldsmallboat-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-pablo-blue.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-hot-spicy.jpg
+- name: paris-paris-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-ww2-dresden.jpg
+- name: windowmountain-window-mountain-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-plentiful.jpg
+- name: nyc-flag-nycflag-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-rainbow-festival.jpg
+- name: oldbarn-oldbarn-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-blue-circuit.jpg
+- name: death-valley-death-valley-national-park-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-neo-instinct.jpg
+- name: border-crossing-bordercrossing-cinnamon-rolls.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-cinnamon-rolls.png
+- name: paris-paris-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-spagetti-accident.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-hot-spicy.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-hot-spicy.png
+- name: locked-up-steam-lock-up-steam-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-monet-one.jpg
+- name: white-house-lawn-white-house-lawn-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-oily-mcoilface.jpg
+- name: gypsy-wagon-gypsywagon-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-wols.jpg
+- name: aws-s3-stories-new-beach-rocks-currents-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-beach-rocks-currents-kand-two.jpg
+- name: oldhouse-oldhouse-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-deep-connections.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-green-zuma.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-green-zuma.png
+- name: old-cabin-oldcabin-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-far-away.jpg
+- name: ellis-island-ellis-island-room-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-spagetti-accident.jpg
+- name: ellis-island-ellisisland-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-crunch-paper.jpg
+- name: berlinwall-DSC-0084-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-internet-numbers.jpg
+- name: amusement-park-amusement-park-2-jap-dys-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-jap-dys-1.jpg
+- name: border-crossing-bordercrossing-blue-granite.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-blue-granite.png
+- name: stories-new-54-32-800-500-0-max-0--5--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-54-32-800-500-0-max-0--5--1.jpg
+- name: docks-docks-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-dali-three.jpg
+- name: stories-server-cloud1-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-server-cloud1-feed-people.jpg
+- name: rain-princess-IMG_4424.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_4424.jpg
+- name: oldhouse-oldhouse-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-purp-paper.jpg
+- name: fence-mexico-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-ww2-color.jpg
+- name: paris-paris-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-crabapple.jpg
+- name: old-gas-pumps-oldgaspumps-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-smoking-cigarette.jpg
+- name: san-francisco-street-view-san-francisco-street-view-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-deep-connections.jpg
+- name: school-clouds-church-clouds-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-mucha-mult.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-creativity.jpg
+- name: yuma-bank-yuma-bak.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak.jpg
 ---
 Transforming Sites To Build An Innovative Culture.&nbsp;Daughters Of The American Revolution Honor Two Bixby Students.&nbsp;Fireworks Safety Applies To People And Pooches.&nbsp;Zoe Kravitz's Emotional Wedding.&nbsp;Haygood Honored For His Helping Hand.&nbsp;Morgan's Goal Winning The World Cup.&nbsp;Charges Dropped Against Detroit Artist Sheefy McFly.&nbsp;Mourners Remember Slain Utah College Student At Vigil.&nbsp;
